@@ -2,7 +2,7 @@ package net.ripe.whois.services;
 
 import com.google.common.collect.Lists;
 import net.ripe.whois.AbstractIntegrationTest;
-import net.ripe.whois.SsoTokenFilter;
+import net.ripe.whois.config.OidcUtils;
 import net.ripe.whois.web.api.whois.domain.NameValuePair;
 import net.ripe.whois.web.api.whois.domain.WhoisWebDTO;
 import org.junit.jupiter.api.Test;
@@ -19,6 +19,7 @@ public class WhoisDomainObjectServiceIntegrationTest extends AbstractIntegration
 
     @Test
     public void create_domain_object() {
+
         final WhoisWebDTO dto = new WhoisWebDTO();
         dto.type = "prefix";
         dto.attributes = Lists.newArrayList(
@@ -27,21 +28,24 @@ public class WhoisDomainObjectServiceIntegrationTest extends AbstractIntegration
             new NameValuePair("nserver", "ns1.test.nl"));
 
 
-        final ResponseEntity<String> response = post("/db-web-ui/api/whois/domain-objects/TEST", String.class, postEntity(dto));
+        final String xsrfToken = extractXsrfCookie();
+
+        final HttpHeaders headers = new HttpHeaders();
+
+        headers.setBearerAuth("aabbccdd");
+        headers.add(HttpHeaders.COOKIE, OidcUtils.OIDC_CSRF_COOKIE_NAME + "=" + xsrfToken);
+        headers.add("X-XSRF-TOKEN", xsrfToken);
+
+        final HttpEntity<WhoisWebDTO> entity = new HttpEntity<>(dto, headers);
+
+        final ResponseEntity<String> response = post(
+                "/db-web-ui/api/whois/domain-objects/TEST",
+                String.class,
+                entity
+        );
 
         assertThat(response.getStatusCode(), is(HttpStatus.OK));
-        assertThat(response.getHeaders().get("Set-Cookie").get(0), containsString("DBSESSIONID"));
+        assertThat(response.getHeaders().get("Set-Cookie").getFirst(), containsString(OidcUtils.OIDC_LOCAL_COOKIE_NAME));
     }
 
-    // helper methods
-
-    private HttpEntity<WhoisWebDTO> postEntity(final WhoisWebDTO dto) {
-        return new HttpEntity(dto, ssoTokenKey());
-    }
-
-    private HttpHeaders ssoTokenKey() {
-        final HttpHeaders requestHeaders = new HttpHeaders();
-        requestHeaders.add("Cookie", SsoTokenFilter.SSO_TOKEN_KEY + "=aabbccdd");
-        return requestHeaders;
-    }
 }
